# ml-sandbox

./: .gitignore  README.md  hydra-test.py  pyproject.toml
configs/: classification_dataset.yaml  config.yaml  config_expanded.yaml  config_expanded_old.yaml  config_hydra.yaml  config_old.yaml  train.yaml
configs/scheduler/: cosine.yaml  linear.yaml
data/: data.yaml
data/labels/: train.cache
notebooks/: Classification.ipynb  Data.ipynb  EDA.ipynb  EDA_MERGED.ipynb  README.md  debug.ipynb  sampler.ipynb
scripts/: download_model.py  expanded-merged-to-raw.py  expanded-raw-to-processed.py  normalization_statistics.py  process_classification_dataset.py  train.py  train2.py  trial.py
src/datasets/: classification.py
src/losses/: factory.py  focal.py
src/models/: factory.py  resnet.py
src/optimizers/: optimizer.py
src/trainers/: default.py
src/utils/: config.py  extra.py  metrics.py  reproducibility.py
yolo/: main.py
